Remove overflow-x scroll on sections pane, fixes #31

--- a/css/site.css
+++ b/css/site.css
@@ -82,7 +82,8 @@ a {
 .nav {
     border-right:1px solid #ccc;
     height:100%;
-    overflow:auto;
+    overflow-y:auto;
+    overflow-x:hidden;
 }
 
 .nav h2 {
